Icons and bio text on skills alignment

--- a/portfolio/my_react_portfolio/public/index.html
+++ b/portfolio/my_react_portfolio/public/index.html
@@ -27,8 +27,15 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <!-- added fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
 
-    <title>React App</title>
+    <title>Mish's Portfolio in React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
