Left side of the contact page

--- a/portfolio/my_react_portfolio/public/index.html
+++ b/portfolio/my_react_portfolio/public/index.html
@@ -34,6 +34,15 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
+    <!-- {fonts.google} -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Anton"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Anton|Oxygen"
+      rel="stylesheet"
+    />
 
     <title>Mish's Portfolio in React</title>
   </head>
